# Gauntlike

./: CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/tae/: app.hpp  color.hpp  input.hpp  renderer.hpp  rng.hpp  scores.hpp  ui.hpp
engine/src/: app.cpp  color.cpp  curses_session.cpp  curses_session.hpp  input.cpp  input_map.cpp  renderer.cpp  scores.cpp  ui.cpp
games/arcade/: CMakeLists.txt  main.cpp
games/breakout/: CMakeLists.txt  main.cpp
games/breakout/src/: breakout.cpp  breakout.hpp  scenes.cpp  scenes.hpp
games/gauntlike/: CMakeLists.txt  main.cpp
games/gauntlike/src/: game.cpp  game.hpp  map.cpp  map.hpp  mapgen.cpp  mapgen.hpp  scenes.cpp  scenes.hpp
games/snake/: CMakeLists.txt  main.cpp
games/snake/src/: scenes.cpp  scenes.hpp  snake.cpp  snake.hpp
tests/: CMakeLists.txt  test_breakout.cpp  test_color.cpp  test_game.cpp  test_input.cpp  test_map.cpp  test_mapgen.cpp  test_scores.cpp  test_snake.cpp
